recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: too many arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit
tree(7,75,30,0,8); 
    ^